--- a/dialog.ui
+++ b/dialog.ui
@@ -38,15 +38,18 @@
       <string>Native</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="gpgPath"/>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="gitPath"/>
+      </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
          <string>Executable git</string>
         </property>
        </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="gitPath"/>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label_3">
@@ -55,8 +58,19 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="gpgPath"/>
+      <item row="1" column="2">
+       <widget class="QToolButton" name="toolButtonGpg">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QToolButton" name="toolButtonGit">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -77,6 +91,13 @@
       <item row="0" column="1">
        <widget class="QLineEdit" name="passPath"/>
       </item>
+      <item row="0" column="2">
+       <widget class="QToolButton" name="toolButtonPass">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
@@ -86,6 +107,9 @@
       <string>Other</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_3">
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="storePath"/>
+      </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label_4">
         <property name="text">
@@ -93,8 +117,12 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="storePath"/>
+      <item row="0" column="2">
+       <widget class="QToolButton" name="toolButtonStore">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
