--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -36,11 +36,18 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout_3">
-        <item>
+       <layout class="QGridLayout" name="gridLayout_2">
+        <item row="1" column="1">
          <widget class="QLineEdit" name="lineEdit"/>
         </item>
-        <item>
+        <item row="1" column="2">
+         <widget class="QToolButton" name="clearButton">
+          <property name="text">
+           <string>X</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
          <widget class="QTreeView" name="treeView"/>
         </item>
        </layout>
