Adding swedish and polish to resources

--- a/resources.qrc
+++ b/resources.qrc
@@ -6,6 +6,10 @@
         <file>localization/localization_hu_HU.ts</file>
         <file>localization/localization_nl_NL.qm</file>
         <file>localization/localization_nl_NL.ts</file>
+        <file>localization/localization_sv_SE.qm</file>
+        <file>localization/localization_sv_SE.ts</file>
+        <file>localization/localization_pl_PL.qm</file>
+        <file>localization/localization_pl_PL.ts</file>
         <file>artwork/icon.icns</file>
         <file>artwork/icon.ico</file>
         <file>artwork/icon.png</file>
