Added Russian translation

--- a/resources.qrc
+++ b/resources.qrc
@@ -14,6 +14,8 @@
         <file>localization/localization_sv_SE.ts</file>
         <file>localization/localization_pl_PL.qm</file>
         <file>localization/localization_pl_PL.ts</file>
+        <file>localization/localization_ru_RU.qm</file>
+        <file>localization/localization_ru_RU.ts</file>
         <file>artwork/icon.icns</file>
         <file>artwork/icon.ico</file>
         <file>artwork/icon.png</file>
