lol QtCreator accidentally renamed the widget too .. push -> tool

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -58,7 +58,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QToolButton" name="toolButton">
+        <widget class="QToolButton" name="pushButton">
          <property name="text">
           <string>Push</string>
          </property>
