adding of newly created .gpg-id file(s)

--- a/dialog.ui
+++ b/dialog.ui
@@ -13,34 +13,26 @@
   <property name="windowTitle">
    <string>Configuration</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_4">
-   <item row="2" column="0">
-    <widget class="QGroupBox" name="groupBoxPass">
-     <property name="title">
-      <string>Pass</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="2">
-       <widget class="QToolButton" name="toolButtonPass">
-        <property name="text">
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="labelPassPath">
-        <property name="text">
-         <string>Executable pass</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="passPath"/>
-      </item>
-     </layout>
-    </widget>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_5">
+     <item>
+      <widget class="QRadioButton" name="radioButtonNative">
+       <property name="text">
+        <string>&amp;Native git/gpg</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QRadioButton" name="radioButtonPass">
+       <property name="text">
+        <string>&amp;Use pass</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
-   <item row="1" column="0">
+   <item>
     <widget class="QGroupBox" name="groupBoxNative">
      <property name="title">
       <string>Native</string>
@@ -83,35 +75,33 @@
      </layout>
     </widget>
    </item>
-   <item row="0" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout_5">
-     <item>
-      <widget class="QRadioButton" name="radioButtonNative">
-       <property name="text">
-        <string>Native git/gpg</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QRadioButton" name="radioButtonPass">
-       <property name="text">
-        <string>Use pass</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="5" column="0">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+   <item>
+    <widget class="QGroupBox" name="groupBoxPass">
+     <property name="title">
+      <string>Pass</string>
      </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-     </property>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="2">
+       <widget class="QToolButton" name="toolButtonPass">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="labelPassPath">
+        <property name="text">
+         <string>Executable pass</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="passPath"/>
+      </item>
+     </layout>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Other</string>
@@ -154,16 +144,6 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="3">
-         <widget class="QLabel" name="labelSeconds">
-          <property name="text">
-           <string>Seconds</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="2">
-         <widget class="QSpinBox" name="spinBoxAutoclearSeconds"/>
-        </item>
         <item row="1" column="0">
          <widget class="QCheckBox" name="checkBoxHidePassword">
           <property name="text">
@@ -178,9 +158,40 @@
           </property>
          </widget>
         </item>
+        <item row="1" column="2">
+         <widget class="QCheckBox" name="checkBoxAddGPGId">
+          <property name="text">
+           <string>Automatically add .gpg-id files</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <item>
+           <widget class="QSpinBox" name="spinBoxAutoclearSeconds"/>
+          </item>
+          <item>
+           <widget class="QLabel" name="labelSeconds">
+            <property name="text">
+             <string>Seconds</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
        </layout>
       </item>
      </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
     </widget>
    </item>
   </layout>
