--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -221,6 +221,10 @@ footer {
     right:50px;
     top:52px;
   }
+
+  header ul:nth-of-type(2) {
+    top: 116px;
+  }
 }
 
 @media print, screen and (max-width: 840px) {
@@ -294,4 +298,14 @@ footer {
         left: 0;
 }
 
+.background {
+  z-index: -1;
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: url(../images/logo.png) no-repeat 200px 100px;
+  opacity: 0.2;
+}
 
