--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>631</width>
-    <height>363</height>
+    <width>621</width>
+    <height>336</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,6 +22,12 @@
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
+      </property>
+      <property name="lineWidth">
+       <number>0</number>
+      </property>
+      <property name="midLineWidth">
+       <number>0</number>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <property name="leftMargin">
@@ -92,11 +98,27 @@
          </property>
          <property name="sizeHint" stdset="0">
           <size>
-           <width>40</width>
-           <height>20</height>
+           <width>37</width>
+           <height>17</height>
           </size>
          </property>
         </spacer>
+       </item>
+       <item>
+        <widget class="QComboBox" name="profileBox">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>100</width>
+           <height>10</height>
+          </size>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -163,6 +185,7 @@ p, li { white-space: pre-wrap; }
   <tabstop>updateButton</tabstop>
   <tabstop>usersButton</tabstop>
   <tabstop>configButton</tabstop>
+  <tabstop>profileBox</tabstop>
   <tabstop>textBrowser</tabstop>
  </tabstops>
  <resources/>
