--- a/dialog.ui
+++ b/dialog.ui
@@ -145,24 +145,21 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
+       <widget class="QTableWidget" name="profileTable">
+        <column>
+         <property name="text">
+          <string>Name</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Path</string>
+         </property>
+        </column>
+       </widget>
+      </item>
+      <item>
        <layout class="QGridLayout" name="gridLayout_5">
-        <item row="1" column="3">
-         <widget class="QLineEdit" name="storePath"/>
-        </item>
-        <item row="1" column="4">
-         <widget class="QToolButton" name="toolButtonStore">
-          <property name="text">
-           <string>...</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="2">
-         <widget class="QLabel" name="labelStorePath">
-          <property name="text">
-           <string>Folder password-store</string>
-          </property>
-         </widget>
-        </item>
         <item row="1" column="1">
          <widget class="QLineEdit" name="profileName"/>
         </item>
@@ -173,9 +170,37 @@
           </property>
          </widget>
         </item>
+        <item row="1" column="2">
+         <widget class="QLabel" name="labelStorePath">
+          <property name="text">
+           <string>Folder password-store</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="3">
+         <widget class="QLineEdit" name="storePath"/>
+        </item>
+        <item row="1" column="4">
+         <widget class="QToolButton" name="toolButtonStore">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QToolButton" name="toolButton">
+          <property name="text">
+           <string>Add</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
      </layout>
+     <zorder>labelStorePath</zorder>
+     <zorder></zorder>
+     <zorder>profileTable</zorder>
+     <zorder></zorder>
     </widget>
    </item>
    <item>
