Added waiting animation widget from https://github.com/mojocorp/QProgressIndicator

--- a/keygendialog.ui
+++ b/keygendialog.ui
@@ -125,7 +125,7 @@ Expire-Date: 0
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="labelExpertInfo">
      <property name="text">
       <string>For expert options check out the &lt;a href=&quot;https://www.gnupg.org/documentation/manuals/gnupg/Unattended-GPG-key-generation.html&quot;&gt;GnuPG manual&lt;/a&gt;</string>
      </property>
