--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -98,6 +98,22 @@
          </property>
         </spacer>
        </item>
+       <item>
+        <widget class="QComboBox" name="profileBox">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>100</width>
+           <height>10</height>
+          </size>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </item>
